# logistics-robot-control-practice

./: .gitattributes  .gitignore  README.md  bootstrap.sh  build.sh  run_examples.sh
src/aws-robomaker-small-warehouse-world/launch/: no_roof_small_warehouse.launch.py
src/aws-robomaker-small-warehouse-world/maps/002/: map.pgm  map.yaml
src/aws-robomaker-small-warehouse-world/maps/005/: map.pgm  map.yaml  map_rotated.pgm
src/aws-robomaker-small-warehouse-world/worlds/no_roof_small_warehouse/: no_roof_small_warehouse.world  no_roof_small_warehouse_with_actor_and_collider.world
src/aws-robomaker-small-warehouse-world/worlds/small_warehouse/: small_warehouse.world
src/gazebo_waypoint_follower/: CMakeLists.txt  package.xml
src/gazebo_waypoint_follower/src/: waypoint_follower.cpp
src/multi_robot_controller/: package.xml  required_sites.yaml  setup.py
src/multi_robot_controller/launch/: multi_robot_controller.launch.py
src/multi_robot_controller/multi_robot_controller/: multi_robot_controller.py
src/multi_robot_controller/params/: multi_robot_controller.yaml
src/multi_robot_controller/tasks/: tasks_example.yaml
src/tb3_multi_robot/launch/: gazebo_multi_nav2_world.launch.py
src/tb3_multi_robot/params/: nav2_params.yaml
